# -

./: CMakeLists.txt  README.md  main.cpp  qml.qrc
CPP/: channelmanager.cpp  course.cpp  coursedetails.cpp  coursemanager.cpp  database.cpp  googleauth.cpp  lesson.cpp  navigationhistory.cpp  profilemanager.cpp  thememanager.cpp  videocoursemanager.cpp
QML/: CourseManagementCard.qml
sourse/: course_js202_data.js  course_py101_data.js  courses_data.js  profile_data.js  tags.json
